update demo and fix discussions layout on mobile

--- a/client/src/pages/Home/styles.css
+++ b/client/src/pages/Home/styles.css
@@ -18,7 +18,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .col {
+  .col.colHome {
     height: auto !important;
   }
 }
